testsuite/tests/rename/should_fail/rnfail004.stderr
rnfail004.hs:6:5: error: [GHC-10498]
    Conflicting definitions for ‘a’
  |
6 |     a           = []
  |     ^
  |
7 |     (b,c,a)     = ([],[],d)
  |          ^

rnfail004.hs:7:6: error: [GHC-10498]
    Conflicting definitions for ‘b’
  |
7 |     (b,c,a)     = ([],[],d)
  |      ^
  |
8 |     [d,b,_]     = ([],a,[])
  |        ^

